welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:5: error: not found: value faire_diagonale
faire_diagonale(diag:Int,x:Int,y:Int,compteur:Int)
^Diagonal:5: error: not found: value x
faire_diagonale(diag:Int,x:Int,y:Int,compteur:Int)
                         ^Diagonal:5: error: not found: value y
faire_diagonale(diag:Int,x:Int,y:Int,compteur:Int)
                               ^Diagonal:5: error: not found: value compteur
faire_diagonale(diag:Int,x:Int,y:Int,compteur:Int)
                                     ^Diagonal:9: error: not found: value compteur
      ecritMessage(compteur)
                   ^Diagonal:10: error: not found: value compteur
      compteur = compteur + 1
      ^Diagonal:11: error: not found: value x
      x = x+1
      ^Diagonal:12: error: not found: value y
      y = y - 1
      ^Diagonal:13: error: not found: value x
      setPos(x,y)
             ^Diagonal:13: error: not found: value y
      setPos(x,y)
               ^Diagonal:29: error: not found: value faire_diagonale
      faire_diagonale(diag,x,y,compteur)
      ^Diagonal:39: error: not found: value faire_diagonale
        faire_diagonale(diag,x,y,compteur)
        ^